<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Korean Notebook</string>
    <string name="grammar">Grammar</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="flashcards">Flashcards</string>
    <string name="notes">Notes</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="front">Front</string>
    <string name="back">Back</string>


    <string name="preference_file_key">preference_file_key</string>
    <string name="next_flashcard">Next</string>
    <string name="hard_flashcard">Hard</string>
    <string name="flashcard_end">No more flashcards</string>
    <string name="flashcards_again_text">Review again</string>
    <string name="flashcards_end_text">No more flashcards</string>
    <string name="search_hint">Search grammar or vocabulary</string>
</resources>