<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/grammar_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grammar" />

    <Button
        android:id="@+id/vocab_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary" />

    <Button
        android:id="@+id/flashcards_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flashcards" />

    <Button
        android:id="@+id/notes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />
</LinearLayout>